--- a/index.html
+++ b/index.html
@@ -16,19 +16,29 @@
 
       <main>
         <article>
-          <h2>Pen: TITLE GOES HERE</h2>
-          <h3>by CREATOR OF PEN</h3>
-          <p>DESCRIBE/REVIEW THE PEN</p>
+          <h2>Pen: Parallax Star background in CSS</h2>
+          <h3>by sarazond</h3>
+          <p>I enjoy the dark atmosphere of this pen.</p>
+          <p>Stars slowly moving downward makes you feel like you are drifting through space</p>
+          <p>Growing up I always enjoyed 2d pixel games and I still love when it is used to this day for modern art, film, games, or other media.</p>
         </article>
-        <section>EMBED PEN IN THIS SECTION</section>
+        <section><p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="LYGbwj" data-user="sarazond" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+          <span>See the Pen <a href="https://codepen.io/sarazond/pen/LYGbwj">
+          Parallax Star background in CSS</a> by sarazond (<a href="https://codepen.io/sarazond">@sarazond</a>)
+          on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script></section>
         <aside>
-          <h2>Hello, I'm ...</h2>
-          <p>INTRODUCE YOURSELF</p>
+          <h2>Hello, I'm Franko</h2>
+          <p>I am 27 years old</p>
+          <p>I enjoy playing games with friends and family</p>
+          <p>I love to cook and go out eating</p>
+          <p>Watching films at night is one of my favorite activities</p>
           <p class="bye">I hoped you liked my Pen of the Week.</p>
         </aside>
       </main>
       <footer class="sans-serif">
-        <p>&copy;2020 YOUR NAME</p>
+        <p>&copy;2020 Franko Leka</p>
         <p>
           Variable font <span class="serif">Fraunces</span> provided by
           <a href="https://github.com/undercasetype/Fraunces"
